# echo_bot_ros_pkgs

./: README.md
BlenderData/: lower_lleg.blend  lower_lleg.blend1  lower_rleg.blend  lower_rleg.blend1  upper_lleg.blend  upper_lleg.blend1  upper_rleg.blend  upper_rleg.blend1  upper_side_lleg.blend  upper_side_lleg.blend1  upper_side_rleg.blend  upper_side_rleg.blend1  wheel.blend  wheel.blend1
echo_bot_common/: README.md
echo_bot_common/echo_bot_bringup/: CMakeLists.txt  package.xml
echo_bot_common/echo_bot_common/: CMakeLists.txt  package.xml
echo_bot_common/echo_bot_description/: CMakeLists.txt  package.xml
echo_bot_common/echo_bot_description/launch/: display_echo_bot.launch
echo_bot_common/echo_bot_description/launch/config/: display.rviz
echo_bot_common/echo_bot_description/meshes/DAE/: lower_lleg.dae  lower_rleg.dae  tyre.dae  upper_leg.dae  upper_side_leg.dae  wheel.dae
echo_bot_common/echo_bot_description/meshes/STL/: lower_lleg.stl  lower_rleg.stl  upper_lleg.stl  upper_side_leg.stl  wheel.stl
echo_bot_common/echo_bot_description/robots/: echo_bot.urdf  echo_bot.urdf.xacro  test.urdf
echo_bot_common/echo_bot_description/urdf/: common.xacro
echo_bot_common/echo_bot_description/urdf/leg/: echo_bot_leg.gazebo.xacro  echo_bot_leg.transmission.xacro  echo_bot_leg.urdf.xacro
echo_bot_common/echo_bot_description/urdf/sensors/imu/: imu.urdf.xacro
echo_bot_common/echo_bot_description/urdf/sensors/lidar/: lidar.urdf.xacro
echo_bot_common/echo_bot_description/urdf/torso/: echo_bot_torso.gazebo.xacro  echo_bot_torso.urdf.xacro
echo_bot_common/echo_bot_description/urdf/wheel/: echo_bot_wheel.gazebo.xacro  echo_bot_wheel.transmission.xacro  echo_bot_wheel.urdf.xacro
echo_bot_control/echo_bot_control/: CMakeLists.txt  package.xml
echo_bot_control/self_balancing_controller/: CMakeLists.txt  package.xml
echo_bot_simulator/: README.md
echo_bot_simulator/closed_loop_controller/: CMakeLists.txt
echo_bot_simulator/closed_loop_controller/src/: closed_loop_controller.cpp
echo_bot_simulator/echo_bot_gazebo/: CMakeLists.txt  package.xml
echo_bot_simulator/echo_bot_gazebo/launch/: display_sdf.launch  spawn_echo_bot.launch  spawn_sdf.launch  test.launch
echo_bot_simulator/echo_bot_gazebo/launch/config/: display.rviz
echo_bot_simulator/echo_bot_gazebo/models/echo_bot/: model.config  model.sdf
echo_bot_simulator/echo_bot_gazebo/models/echo_bot/meshes/DAE/: lower_lleg.dae  lower_rleg.dae  torso.dae  upper_leg.dae  upper_lleg.dae  upper_rleg.dae  upper_side_leg.dae  upper_side_lleg.dae  upper_side_rleg.dae
echo_bot_simulator/echo_bot_gazebo/models/echo_bot/meshes/STL/: torso.stl  tyre.stl  upper_leg.stl  upper_rleg.stl  upper_side_lleg.stl
echo_bot_simulator/echo_bot_gazebo/worlds/: clearpath_playpen.world
echo_bot_simulator/echo_bot_gazebo_control/: CMakeLists.txt  package.xml
echo_bot_simulator/echo_bot_gazebo_control/config/: controller.yaml
echo_bot_simulator/echo_bot_gazebo_control/launch/: echo_bot_gazebo_control.launch
echo_bot_simulator/echo_bot_simulator/: CMakeLists.txt  package.xml
