<?xml version="1.0"?>
<package>
  <name>closed_loop_controller</name>
  <version>1.0.0</version>
  <description>The closed_loop_controller package</description>

  <maintainer email="kuwano.tomohiro455@mail.kyutech.jp">calm0815</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>